Update and rename iaai2024 to iaai2024.md

--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -4,7 +4,7 @@ title               : "IAAI Annual Meeting 2024"
 meta_title          : "IAAI Annual Meeting 2024"
 subheadline         : "IAAI Annual Meeting 2024"
 teaser              : "When is the IAAI Annual Meeting in 2024?"
-permalink           : "/iaai2024/"
+permalink           : "/events/iaai2024/"
 ---
 
 ## IAAI 2024
