--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -1,14 +1,14 @@
 ---
 layout              : page
-title               : "IAAI Annual Meeting 2024"
-meta_title          : "IAAI Annual Meeting 2024"
-subheadline         : "IAAI Annual Meeting 2024"
-teaser              : "When is the IAAI Annual Meeting in 2024?"
+title               : "IAAI Conference 2024"
+meta_title          : "IAAI Conference 2024 -- Full Day Event"
+subheadline         : "Septmeber 24th, 2024, College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon"
+teaser              : "When: September 24th 2024, Where: College of Management Academic Studies,  Rishon LeTsiyon"
 permalink           : "/events/iaai2024/"
 ---
 
-## IAAI 2024
-### Septmeber 24th, 2024
+## IAAI Conference 2024
+### Septmeber 24th, 2024 -- Full Day Event
 ### College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon
 ### Organizers: Galit Haim and Omer Ben-Porat
 
