--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -2,7 +2,7 @@
 layout              : page
 title               : "IAAI Conference 2024"
 meta_title          : "IAAI Conference 2024 -- Full Day Event"
-subheadline         : "Septmeber 24th, 2024, College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon"
+subheadline         : "Septmeber 24th, 2024, College of Management Academic Studies, Rishon LeTsiyon"
 teaser              : "When: September 24th 2024, Where: College of Management Academic Studies,  Rishon LeTsiyon"
 permalink           : "/events/iaai2024/"
 ---
@@ -10,7 +10,7 @@ permalink           : "/events/iaai2024/"
 ## IAAI Conference 2024
 ### Septmeber 24th, 2024 -- Full Day Event
 ### College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon
-### Organizers: Galit Haim and Omer Ben-Porat
+### Organizers: [https://english.colman.ac.il/staff_members/dr-galit-haim/](Galit Haim) and [https://sites.google.com/site/omerbp/home](Omer Ben-Porat)
 
 The IAAI Annual Meeting for 2024 will take place Septmeber 24th, 2024 at the College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon. The event will be organized by Galit Haim and Omer Ben-Porat.
 
