--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -8,9 +8,9 @@ permalink           : "/events/iaai2024/"
 ---
 
 ## IAAI Conference 2024
-### Septmeber 24th, 2024 -- Full Day Event
-### College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon
-### Organizers: (https://english.colman.ac.il/staff_members/dr-galit-haim/)[Galit Haim] and (https://sites.google.com/site/omerbp/home)[Omer Ben-Porat]
+### Date: Septmeber 24th, 2024 -- Full Day Event
+### Location: College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon
+### Organizers: [Galit Haim](https://english.colman.ac.il/staff_members/dr-galit-haim/) and [Omer Ben-Porat](https://sites.google.com/site/omerbp/home)
 
 The IAAI Annual Meeting for 2024 will take place Septmeber 24th, 2024 at the College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon. The event will be organized by Galit Haim and Omer Ben-Porat.
 
