--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -1,9 +1,9 @@
 ---
 layout              : page
 title               : "IAAI Conference 2024"
-meta_title          : "IAAI Conference 2024 -- Full Day Event"
-subheadline         : "Septmeber 24th, 2024, College of Management Academic Studies, Rishon LeTsiyon"
-teaser              : "When: September 24th 2024, Where: College of Management Academic Studies,  Rishon LeTsiyon"
+meta_title          : "IAAI Conference 2024"
+subheadline         : "Full Day Event"
+teaser              : "September 24th 2024, College of Management Academic Studies,  Rishon LeTsiyon"
 permalink           : "/events/iaai2024/"
 ---
 
