--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -3,7 +3,7 @@ layout              : page
 title               : "IAAI Conference 2024"
 meta_title          : "IAAI Conference 2024"
 subheadline         : "Full Day Event"
-teaser              : "September 24th 2024, College of Management Academic Studies,  Rishon LeTsiyon"
+teaser              : "September 24th 2024, College of Management Academic Studies"
 permalink           : "/events/iaai2024/"
 ---
 
