--- a/pages/iaai2024.md
+++ b/pages/iaai2024.md
@@ -14,7 +14,7 @@ permalink           : "/events/iaai2024/"
 
 The IAAI Annual Meeting for 2024 will take place Septmeber 24th, 2024 at the College of Management Academic Studies, Elie Wiesel St 2, Rishon LeTsiyon. The event will be organized by Galit Haim and Omer Ben-Porat.
 
-Stay tuned for more information
+Stay tuned for more information!
 
 
 
